syntax = "proto3";

package user_service;

option go_package = "user_service/pkg/user_service";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/v1/register"
      body: "*"
    };
  }
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{id}"
    };
  }
  rpc UpdateUser(User) returns (User) {
    option (google.api.http) = {
      patch: "/api/v1/users/{id}"
    };
  }
  rpc DeleteUser(GetUserRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/api/v1/users/{id}"
    };
  }
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4; // Пароль будет храниться в виде хэша
  string grade = 5; // Добавляем поле grade
}

message RegisterRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string grade = 4;
}

message RegisterResponse {
  string id = 1;
  string message = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}
